fix: glossary header height on mobile/handling of pagination (ZNTA-1606)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -315,6 +315,7 @@ body.templatestyle {
 
 .glossary-header {
   flex-direction: row-reverse;
+  padding-top: 8rem;
 }
 
 .glossary-header .row {
@@ -6082,10 +6083,6 @@ i.i--left.i--lock, i.i--left.i--trash {x
     height: 1px !important;
     width: 1px !important;
     overflow: hidden;
-  }
-
-  .glossary-header {
-    padding-top: 8rem;
   }
 
   .glossaryhead-wrapper {
